fixed an issue where clicking or tapping spell slots collapsed the section in spellbooks

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1081,6 +1081,10 @@ bi {
     webkit-user-select: none;
 }
 
+.non_clickable {
+    cursor: default;
+}
+
 .invis {
     display: none;
 }
